# mangaplace

./: .gitignore  LICENSE  PKGBUILD  README.md  app.ts  build.py  bun.lockb  index.ts  main.spec  naruto.json  output.json  package.json  pyproject.toml  requirements.txt  test.json  test.norg
.github/workflows/: push-to-aur.yml  release.yml
mangaplace/: config.py  endpoints.py  image_utils.py  main.py  mangaplace.spec  models.py  pyproject.toml  ui.py  utils.py
mangaplace/api/: endpoints.py
routes/: test.ts
src/: api.py  apis.py  config.py  main.py  models.py  ui.py  utils.py
src/api/: image_utils.py
src/mangaplace/: __init__.py
test/: iterfzf_test.py  typer_test.py  typer_ui_test.py
