[project]
name = "mangaplace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.5",
    "pydantic>=2.8.2",
    "fastapi>=0.112.2",
    "aiohttp>=3.10.5",
    "pillow>=10.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
